--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,7 +146,9 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-baidu-map')
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile project(':react-native-vector-icons')
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
