--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.app">
 
+    <!-- 访问GPS定位 --> 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> 
+    <!-- 网络定位--> 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> 
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位--> 
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
+
+    <uses-sdk
+        android:minSdkVersion="16"
+        android:targetSdkVersion="22" />
 
     <application
       android:name=".MainApplication"
@@ -10,6 +22,11 @@
       android:icon="@mipmap/ic_launcher"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
+      <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="q4EmCnqP3GznkMQ2nDyYFve8t4UBgYyr"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
