--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,8 @@
 rootProject.name = 'app'
+include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
+
+include ':react-native-baidu-map'
+project(':react-native-baidu-map').projectDir = new File(settingsDir, '../node_modules/react-native-baidu-map/android')
 
 include ':app'
