--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-native-baidu-map": "^0.6.0",
+    "react-native-deprecated-custom-components": "^0.1.2",
+    "react-native-tab-navigator": "^0.3.4",
+    "react-native-vector-icons": "^5.0.0"
   },
   "devDependencies": {
     "babel-jest": "23.0.1",
