--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,7 +146,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-baidu-map')
+    compile project(':react-native-amap3d')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile project(':react-native-vector-icons')
     compile "com.android.support:appcompat-v7:23.0.1"
