--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -26,8 +26,8 @@
       android:theme="@style/AppTheme">
 
       <meta-data
-            android:name="com.baidu.lbsapi.API_KEY"
-            android:value="Ild0cAuGynPk36O9ko6aKlUK7CGqTg5m"/>
+            android:name="com.amap.api.v2.apikey"
+            android:value="5eed4b857686868f3ee5ad35e125a3ce"/>
 
       <activity
         android:name=".MainActivity"
