--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "0.55.4",
-    "react-native-baidu-map": "^0.6.0",
+    "react-native-amap3d": "^1.0.1",
     "react-native-deprecated-custom-components": "^0.1.2",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-vector-icons": "^5.0.0"
